tests/negative/Test6.sp
(* Testing call function with wrong types *)

f(2);

f:Int(a:String) {
	return 2;
}